@@ -20,6 +20,8 @@ Version TBC:
 
  * Add Shift+Enter shortcut for "OK" in the comment dialog (#226).
 
+ * Display offset in both decimal and hexadecimal in status bar (#228).
+
 Version 0.61.1 (2024-03-13):
 
  * Compare data from correct file offsets when "Collapse matches" option is
